test/bad/eqintro_not_eq.pa
lemma bad : ~(0 = 0) {
    ~(0 = 0) by eq_intro;
}
